--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,21 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  dio: ^5.4.1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   go_router: ^13.2.0
+  flutter_riverpod: ^2.4.3
+  riverpod_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  custom_lint:
+  riverpod_generator: ^3.0.0-dev.3
+  riverpod_lint: ^2.3.0
 
 flutter:
   uses-material-design: true
