--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,19 +7,22 @@ environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
+  animate_do: ^3.3.3
+  card_swiper: ^3.0.1
   dio: ^5.4.1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
-  go_router: ^13.2.0
   flutter_riverpod: ^2.4.3
+  go_router: ^13.2.0
+  intl: ^0.19.0
   riverpod_annotation: ^2.2.0
 
 dev_dependencies:
+  custom_lint: null
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  custom_lint:
   riverpod_generator: ^3.0.0-dev.3
   riverpod_lint: ^2.3.0
 
